# the-forrest

./: README.md  mongodb_query
ADC_Converter/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
ADC_Converter/src/: main.cpp
ADC_Converter/src/gpio/: adc.cpp  gpio.cpp
Azure Function/Azure Function/: function_app.py
MoistureSensor/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
MoistureSensor/src/: main.c
RTC_Calibration_Arduino/: platformio.ini
RTC_Calibration_Arduino/src/: main.cpp
SIMCOM/: get_nb_ip.mermaid  output.txt
WebService/: simple_server.py
blinky/: nrf52840_dk.overlay  nrf52840dk_nrf52840.overlay
blinky/src/: main.c
boards/arm/nrf52840_dk/: Kconfig.board  Kconfig.defconfig  nrf52840_dk.dts  nrf52840_dk_defconfig
documentation/: PSM-Enter-Leave.mmd  baud_rate_detection.mermaid  gateway_flow.mmd  gateway_log.txt  gateway_thread_definitions.mmd  iic-rw.puml  init.puml  timeline.mmd  uart_interrupt.mermaid  uart_resume_from_sleep.mmd
echo_bot/: CMakeLists.txt  Kconfig  nrf52dk_nrf52840.overlay  prj.conf
echo_bot/include/uart/: uart.hpp  uart1.hpp
echo_bot/src/: main.c  main.cpp
echo_bot/src/memory_retention/: retained.c
echo_bot/src/uart/: uart.cpp  uart0.cpp  uart1.cpp
gateway/: CMakeLists.txt  Kconfig  nrf52dk_nrf52840.overlay  prj.conf
gateway/include/at/: common.hpp  prv.hpp
gateway/include/at/rylr433/: rylr433.hpp
gateway/include/at/sim7000e/: common.hpp  https.hpp  network_configuration.hpp  power.hpp  time.hpp
gateway/include/data/: collection.hpp  reception.hpp  storage.hpp  transmission.hpp
gateway/include/gpio/: adc.hpp  gpio.hpp
gateway/include/iic/: time.hpp
gateway/include/uart/: uart.hpp
gateway/src/: main.cpp
gateway/src/at/: prv.cpp
gateway/src/at/rylr433/: rylr433.cpp
gateway/src/at/sim7000e/: common.cpp  https.cpp  network_configuration.cpp  power.cpp  time.cpp
gateway/src/data/: collection.cpp  reception.cpp  storage.cpp  transmission.cpp
gateway/src/gpio/: adc.cpp  gpio.cpp
gateway/src/iic/: time.cpp
gateway/src/uart/: uart0.cpp  uart1.cpp
iic/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  prj.conf
iic/includes/iic/: bus.hpp  time.hpp
iic/src/: main.c  main.cpp
iic/src/iic/: bus.cpp  time.cpp
nb-iot/: CMakeLists.txt  nrf52dk_nrf52832.overlay  nrf52dk_nrf52840.overlay  prj.conf  serial-terminal-16112024_213036.txt
nb-iot/include/at/: commands.hpp  http.hpp  https.hpp  prv.hpp
nb-iot/include/at/sim7000e/: https.hpp  network_configuration.hpp  power.hpp  time.hpp
nb-iot/include/gpio/: gpio.hpp
nb-iot/include/iic/: bus.hpp  time.hpp
nb-iot/include/uart/: uart.hpp
nb-iot/src/: main.cpp  main_http.cpp  main_https.cpp
nb-iot/src/at/: commands.cpp  http.cpp  https.cpp  power.cpp  prv.cpp
nb-iot/src/at/sim7000e/: https.cpp  network_configuration.cpp  power.cpp  time.cpp
nb-iot/src/gpio/: gpio.cpp
nb-iot/src/iic/: bus.cpp  time.cpp
nb-iot/src/uart/: uart.cpp
node/: CMakeLists.txt  CMakePresets.json  Kconfig  nrf52dk_nrf52832.overlay  prj.conf
node/include/at/: common.hpp  https.hpp  prv.hpp
node/include/uart/: uart.hpp  uart0.hpp
node/src/: main.cpp
node/src/at/: prv.cpp
node/src/uart/: uart.cpp  uart0.cpp  uart1.cpp
overleaf/: bibliography.bib  main.tex
overleaf/Inhalt/: BatteryMonitoring.tex  Beautify.tex  CloudService.tex  MCU.tex  MoistureSensor.tex  Prototyping.tex  RTC.tex  RYLR498.tex  SIM7000E.tex  SoftwareArchitecture.tex  TechnicalConcept.tex  UART.tex  hardwareinterfaces.tex  titlepage.tex
sleep_mode/: CMakeLists.txt  Kconfig  nrf52dk_nrf52832.overlay  prj.conf  sample.yaml
sleep_mode/src/: main.c  retained.c
uart_bridge/: CMakeLists.txt  nrf52840.overlay  prj.conf
uart_bridge/src/: main.c
uart_bridge_arduino_reciever/uart_bridge_arduino_reciever/src/: main.cpp
uart_libary/: CMakeLists.txt  Kconfig  nrf52dk_nrf52832.overlay  nrf52dk_nrf52840.overlay  readme.md
uart_libary/include/uart/: uart0.hpp  uart1.hpp
uart_libary/src/uart/: uart0.cpp  uart1.cpp
visualisation/: mongodb_query.py  visualisation.html  visualisation2.html
